# upscaler

./: .gitignore  Dockerfile  README.md  pyproject.toml
upscaler/: api.py  cli.py  config.py  downloads.py  ffmpeg_utils.py  realesrgan_torch.py  realesrgan_vulkan.py
