[tool.poetry]
name = "upscaler"
version = "0.1.0"
description =  "CLI-tool for image/video upscaling"
authors = ["a1deas <roland.brannon.am@gmail.com>"]
readme = "README.md"
packages = [{include = "upscaler"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typer = "^0.12.0"
rich = "^13.0.0"
ffmpeg-python = "^0.2.0"
click = ">=8.1.7,<8.2.0"
Pillow = "^10.0.0"
# basicsr is optional and may not build on Python 3.13
# For Python 3.13: Skip torch extras, use Vulkan backend (default) which doesn't need basicsr
# For Python 3.10-3.12: Can install torch extras if needed
basicsr = { version = "^1.4.2", optional = true }

[tool.poetry.extras]
# Note: Torch backend requires basicsr + manual PyTorch installation.
# - Python 3.13: basicsr may fail to build. Use Vulkan backend instead (default, no torch needed).
# - Python 3.10-3.12: Install basicsr, then: pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
torch = ["basicsr"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
upscaler = "upscaler.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
